--- a/index.html
+++ b/index.html
@@ -18,18 +18,30 @@
     <script type="text/babel">
 
 
+        const { useState } = React
 
         const AnimalList = () => {
-            const animali = ["Cane", "Gatto", "Elefante", "Tigre", "Leone"];
+            const [animali, setAnimali] = useState([])
+            const animalsChoices = ["Cane", "Gatto", "Pappagallo", "Cavallo", "Panda"]
+            const estrazioneAnimali = () => {
+                const rimanenti = animalsChoices.filter(animal => !animali.includes(animal));
+                if (rimanenti.length === 0) return;
+                const animaleEstratto = rimanenti[Math.floor(Math.random() * rimanenti.length)];
+                setAnimali([...animali, animaleEstratto]);
+            };
             return (
-                <details>
-                    <summary>Animali</summary>
-                    <ul>
-                        {animali.map((animal, index) => (
-                            <li key={index}>{animal}</li>
-                        ))}
-                    </ul>
-                </details>
+
+                <div>
+                    <button onClick={estrazioneAnimali}>Aggiungi animale</button>
+                    <details>
+                        <summary>Animali</summary>
+                        <ul>
+                            {animali.map((animal, index) => (
+                                <li key={index}>{animal}</li>
+                            ))}
+                        </ul>
+                    </details>
+                </div>
             )
         }
     </script>
